--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,11 @@
-<!--index.wxml-->
 <view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+  <!-- 头部 -->
+  <view class="index-header"></view>
+
+  <!-- 主体 -->
+  <view class="index-content clearfix">
+    <view class="menu-item" wx:for="{{menu}}" data-idx="{{item.idx}}" bindtap="bindViewTap">
+      {{item.name}}
+    </view>
   </view>
 </view>
